GNOME Bugzilla – Bug 755138
avidemux: fix taglist leak
Last modified: 2015-09-17 10:03:50 UTC
After inserting taglist, it should be freed if it has own memory.
Created attachment 311514 [details] [review] avidemux: fix taglist leak
Comment on attachment 311514 [details] [review] avidemux: fix taglist leak commit dc74d744c3ef0f0505544d54e013a621c86cd2a0 Author: Eunhae Choi <eunhae1.choi@samsung.com> Date: Thu Sep 17 10:50:01 2015 +0900 avidemux: Fix taglist leak gst_tag_list_insert() does not take ownership of the inserted taglist. https://bugzilla.gnome.org/show_bug.cgi?id=755138